[package]
name = "WebEngin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#常用依赖库
#序列化、反序列化
serde = { version = "1.0.137", features = ["derive","std"] }
serde_json = "1.0.82"
#多线程
futures-core = "0.3.0"
bytes = "1.0.0"
anyhow = "1.0.69"
dotenv = "0.15.0"
env_logger = "0.10.0"
#日志
tracing = { version = "0.1.25", default-features = false, features = ["std"], optional = true }
#info
#info = "0.1.0"

multipart = { version = "0.18.0", features = ["hyper"] }
sqlx = { version = "0.6", features = ["mysql","runtime-tokio-native-tls",  "uuid", "time"] }
clap = { version = "3.2", features = ["derive","env"] }
tower = "0.4.13"
tower-http = { version = "0.2.0", features = ["trace"] }
reqwest = { version = "0.11.11", features = ["stream","multipart","json"] }

tokio = { version = "1.19", features = ["full"] }


